    Thanks, Antoine Beaupré
  * Split CFLAGS into words when building wrapper. Closes: #682237
  * osm: Avoid calling urlto before generated files are registered.
    Thanks, Philippe Gauthier and Antoine Beaupré
  * osm: Add osm_openlayers_url configuration setting.
    Thanks, Genevieve
  * osm: osm_layers can be used to configured the layers displayed on the map.
    Thanks, Antoine Beaupré

 -- Joey Hess <joeyh@debian.org>  Thu, 19 Jul 2012 13:46:52 -0400

ikiwiki (3.20120629) unstable; urgency=low

  * mirrorlist: Add mirrorlist_use_cgi setting that avoids usedirs or
    other config differences by linking to the mirror's CGI. (intrigeri)

 -- Joey Hess <joeyh@debian.org>  Fri, 29 Jun 2012 10:16:08 -0400

ikiwiki (3.20120516) unstable; urgency=high

  * meta: Security fix; add missing sanitization of author and authorurl.
    CVE-2012-0220 Thanks, Raúl Benencia

 -- Joey Hess <joeyh@debian.org>  Wed, 16 May 2012 19:51:27 -0400

ikiwiki (3.20120419) unstable; urgency=low

  * Remove dead link from plugins/teximg. Closes: #664885
  * inline: When the pagenames list includes pages that do not exist, skip
    them.
  * meta: Export author information in html <meta> tag. Closes: #664779
    Thanks, Martin Michlmayr
  * notifyemail: New plugin, sends email notifications about new and 
    changed pages, and allows subscribing to comments.
  * Added a "changes" hook. Renamed the "change" hook to "rendered", but
    the old hook name is called for now for back-compat.
  * meta: Support keywords header. Closes: #664780
    Thanks, Martin Michlmayr
  * passwordauth: Fix url in password recovery email to be absolute.
  * httpauth: When it's the only auth method, avoid a pointless and
    confusing signin form, and go right to the httpauthurl.
  * rename: Allow rename to be started not from the edit page; return to
    the renamed page in this case.
  * remove: Support removing of pages in the transient underlay. (smcv)