@@ -10,6 +10,7 @@ ikiwiki (3.20120630) UNRELEASED; urgency=low
     Thanks, Genevieve
   * osm: osm_layers can be used to configured the layers displayed on the map.
     Thanks, Antoine Beaupré
+  * comments: Remove ipv6 address specific code.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 19 Jul 2012 13:46:52 -0400
 
